--- a/sgd_project/sgd_project/sgd_project/sgd_project.csproj
+++ b/sgd_project/sgd_project/sgd_project/sgd_project.csproj
@@ -112,7 +112,7 @@
     <Compile Include="MenuScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="Lander.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
