--- a/sgd_project/sgd_project/sgd_project/sgd_project.csproj
+++ b/sgd_project/sgd_project/sgd_project/sgd_project.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Body.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="LEM.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="MenuScreen.cs" />
