Start of landing pad support

--- a/sgd_project/sgd_project/sgd_project/sgd_project.csproj
+++ b/sgd_project/sgd_project/sgd_project/sgd_project.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Body.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="LandingPad.cs" />
     <Compile Include="LEM.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="MenuScreen.cs" />
