--- a/sgd_project/sgd_project/sgd_project/sgd_project.csproj
+++ b/sgd_project/sgd_project/sgd_project/sgd_project.csproj
@@ -108,6 +108,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Body.cs" />
+    <Compile Include="BoundingSphereRenderer.cs" />
+    <Compile Include="IBound.cs" />
+    <Compile Include="BoundBox.cs" />
+    <Compile Include="BoundingBoxRenderer.cs" />
+    <Compile Include="BoundSphere.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="LandingPad.cs" />
     <Compile Include="LEM.cs" />
@@ -116,6 +121,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Lander.cs" />
+    <Compile Include="Vertices.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
