--- a/sgd_project/sgd_project/sgd_project/sgd_project.csproj
+++ b/sgd_project/sgd_project/sgd_project/sgd_project.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Body.cs" />
     <Compile Include="BoundingSphereRenderer.cs" />
+    <Compile Include="Ground.cs" />
     <Compile Include="IBound.cs" />
     <Compile Include="BoundBox.cs" />
     <Compile Include="BoundingBoxRenderer.cs" />
